--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,13 +16,13 @@ body {
 
 /* part of this code was used through youtube video to center text on landing page */
 #main-heading {
-    font-size: 5em;
+    font-size: 3em;
     margin: 0;
     padding: 0;
     text-align: center;
     position: absolute;
     font-family: "Josefin Sans", sans-serif;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
 }
@@ -38,12 +38,81 @@ body {
     transform: translateX(-50%) translateY(-50%);
 }
 
-#start-game {
+.start-game {
     transition-duration: 0.4s;
     background-color: #04AA6D;
+    font-family: "Josefin Sans", sans-serif;
+    text-align: center;
+    font-size: 5em;
+    margin-top: 4rem;
+    border: 2px solid black;
 }
 
-#start-game:hover {
+.start-game:hover {
     background-color: #04AA6D;
     color: white;
+}
+
+@media screen and (min-width: 768px) {
+    .start-game {
+        margin-top: -30rem;
+    }
+
+    #main-heading {
+        top: 35%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+
+    #start-game-btn {
+        top: 55%;
+    }
+
+}
+
+@media screen and (min-width: 1280px) {
+
+    body {
+        background-color: #68B7CB;
+    }
+
+    /* part of this code was used through youtube video to center text on landing page */
+    #main-heading {
+        font-size: 5em;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        position: absolute;
+        font-family: "Josefin Sans", sans-serif;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+    }
+
+    #start-game-btn {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        position: absolute;
+        font-family: "Josefin Sans", sans-serif;
+        top: 70%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+    }
+
+    .start-game {
+        transition-duration: 0.4s;
+        background-color: #04AA6D;
+        font-family: "Josefin Sans", sans-serif;
+        text-align: center;
+        font-size: 5em;
+        margin-top: 5rem;
+    }
+
+    .start-game:hover {
+        background-color: #04AA6D;
+        color: white;
+    }
+
 }
