--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,115 +8,6 @@
     box-sizing: border-box;
 }
 
-/* Landing page styles */
-
-body {
-    background-color: #68B7CB;
-}
-
-/* part of this code was used through youtube video to center text on landing page */
-#main-heading {
-    font-size: 2em;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    position: absolute;
-    font-family: "Josefin Sans", sans-serif;
-    top: 30%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-}
-
-#start-game-btn {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    position: absolute;
-    font-family: "Josefin Sans", sans-serif;
-    top: 70%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-}
-
-.start-game {
-    transition-duration: 0.4s;
-    background-color: #DC9537;
-    font-family: "Josefin Sans", sans-serif;
-    text-align: center;
-    font-size: 5em;
-    margin-top: 4rem;
-    border: 2px solid black;
-}
-
-.start-game:hover {
-    background-color: #04AA6D;
-    color: white;
-}
-
-@media screen and (min-width: 768px) {
-    .start-game {
-        margin-top: -30rem;
-    }
-
-    #main-heading {
-        top: 35%;
-    }
-}
-
-@media screen and (min-width: 992px) {
-
-    #start-game-btn {
-        top: 55%;
-    }
-
-}
-
-@media screen and (min-width: 1280px) {
-
-    body {
-        background-color: #68B7CB;
-    }
-
-    /* part of this code was used through youtube video to center text on landing page */
-    #main-heading {
-        font-size: 5em;
-        margin: 0;
-        padding: 0;
-        text-align: center;
-        position: absolute;
-        font-family: "Josefin Sans", sans-serif;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
-    }
-
-    #start-game-btn {
-        margin: 0;
-        padding: 0;
-        text-align: center;
-        position: absolute;
-        font-family: "Josefin Sans", sans-serif;
-        top: 70%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
-    }
-
-    .start-game {
-        transition-duration: 0.4s;
-        background-color: #04AA6D;
-        font-family: "Josefin Sans", sans-serif;
-        text-align: center;
-        font-size: 5em;
-        margin-top: 5rem;
-    }
-
-    .start-game:hover {
-        background-color: #04AA6D;
-        color: white;
-    }
-
-}
-
 /* Game page */
 
 #main-heading-one {
@@ -131,9 +22,21 @@ body {
     min-height: 100vh;
 }
 
-#game-rules {
+#the-game {
+    /* width: 75% ;*/
+}
+
+#choices {
     display: flex;
-    margin-top: auto;
+    justify-content: space-evenly;
+}
+
+.choice-btn {
+    transition-duration: 0.4s;
+    margin-right: 10px;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1rem;
+    text-align: center;
 }
 
 #rps-image-one {
@@ -145,3 +48,97 @@ body {
     max-width: 100%;
     height: auto;
 }
+
+#current-score {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 70px;
+}
+
+footer {
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1rem;
+    background-color: black;
+    color: azure;
+    width: 100%;
+    margin-top: auto;
+    text-align: center;
+    padding-top: 10px;
+    min-height: 50px;
+}
+
+
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+    #main-heading-one {
+        display: flex;
+        font-size: 25px;
+        justify-content: center;
+    }
+
+    #choices {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .choice-btn {
+        transition-duration: 0.4s;
+        margin-right: 10px;
+        font-family: "Josefin Sans", sans-serif;
+        font-size: 2rem;
+        text-align: center;
+        padding: 5px 5px 5px 5px;
+    }
+
+    #rps-image-one {
+        max-width: 100%;
+        height: auto;
+        margin-left: 120px;
+    }
+
+    #rps-image-two {
+        max-width: 100%;
+        height: auto;
+        margin-left: 120px;
+    }
+
+    #current-score {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding-left: 70px;
+        font-size: 30px;
+        text-align: center;
+        margin-right: 80px;
+    }
+
+    footer {
+        font-family: "Josefin Sans", sans-serif;
+        font-size: 23px;
+        background-color: black;
+        color: azure;
+        width: 100%;
+        margin-top: auto;
+        text-align: center;
+        padding-top: 10px;
+        min-height: 50px;
+    }
+
+
+}
+
+/* Media query: laptops and desktops (992px and up) */
+@media screen and (min-width: 992px) {}
+
+/* Media query: desktops (1280px and up) */
+@media screen and (min-width: 1280px) {}
+
+/* Media query: large desktops (1440px and up) */
+@media screen and (min-width: 1440px) {}
+
+/* Media query: slightly wider screen for desktops (1600px and up) */
+@media screen and (min-width: 1600px) {}
+
+/* Media query: Desktop large (1920px and up) */
+@media screen and (min-width: 1920px) {}
