--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,11 @@ footer {
         font-size: 25px;
         justify-content: center;
     }
+#the-game {
+    display: flex;
+    flex-direction: row;
+}
+
 
     #choices {
         display: flex;
@@ -196,6 +201,12 @@ footer {
         justify-content: center;
     }
 
+    #the-game {
+        display: flex;
+        flex-direction: row;
+        grid-template-columns: 1fr;
+    }
+    
     #choices {
         display: flex;
         justify-content: space-evenly;
