--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,10 +364,7 @@ footer {
 }
 
 /* Media query: slightly wider screen for desktops (1600px and up) */
-@media screen and (min-width: 1600px) {}
-
-/* Media query: Desktop large (1920px and up) */
-@media screen and (min-width: 1920px) {
+@media screen and (min-width: 1600px) {
 
     #main-heading-one {
         display: flex;
@@ -390,10 +387,10 @@ footer {
     }
 
     #rps-image-one {
-        max-width: 70%;
+        max-width: 100%;
         height: auto;
         margin-left: 166px;
-        margin-top: 50px;
+        margin-top: 160px;
     }
 
     #rps-image-two {
@@ -424,6 +421,89 @@ footer {
         text-align: center;
         margin-right: 80px;
         margin-bottom: 20px;
+    }
+
+    footer {
+        font-family: "Josefin Sans", sans-serif;
+        font-size: 23px;
+        background-color: black;
+        color: azure;
+        width: 100%;
+        margin-top: auto;
+        text-align: center;
+        padding-top: 16px;
+        min-height: 60px;
+    }
+
+}
+
+/* Media query: Desktop large (1920px and up) */
+@media screen and (min-width: 1920px) {
+
+    #main-heading-one {
+        display: flex;
+        font-size: 25px;
+        justify-content: center;
+    }
+
+    #choices {
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row-reverse;
+    }
+
+    .choice-btn {
+        transition-duration: 0.4s;
+        margin-right: 10px;
+        font-family: "Josefin Sans", sans-serif;
+        font-size: 2rem;
+        text-align: center;
+        padding: 5px 5px 5px 5px;
+    }
+
+    #rps-image-one {
+        max-width: 100%;
+        height: auto;
+        margin-left: 2px;
+        margin-top: 160px;
+    }
+
+    #rps-image-two {
+        max-width: 100%;
+        height: auto;
+        margin-right: 200px;
+        margin-top: 160px;
+        padding-left: 0px;
+    }
+
+    #game-message {
+        display: flex;
+        justify-content: center;
+        font-family: "Josefin Sans", sans-serif;
+        margin-top: 160px;
+    }
+
+
+    #current-score-user {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding-left: 15px;
+        font-size: 30px;
+        text-align: center;
+        margin-right: 0px;
+        margin-top: 0px;
+    }
+
+    #current-score-computer {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding-left: 0px;
+        font-size: 30px;
+        text-align: center;
+        margin-right: 0px;
+        margin-bottom: 0px;
     }
 
     footer {
