--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,36 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: rgb(9,95,121);
-    background: linear-gradient(90deg, rgba(9,95,121,1) 9%, rgba(0,102,255,1) 100%, rgba(2,0,36,1) 100%);
+    background: rgb(9, 95, 121);
+    background: linear-gradient(90deg, rgba(9, 95, 121, 1) 9%, rgba(0, 102, 255, 1) 100%, rgba(2, 0, 36, 1) 100%);
+}
+
+/* starting images and scores */
+
+#computer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#user {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#rps-image-one {
+    max-width: 65%;
+    height: auto;
+    border: 3px solid #000000;
+    box-shadow: 3px 3px 3px #000000;
+}
+
+#rps-image-two {
+    max-width: 65%;
+    height: auto;
+    border: 3px solid #000000;
+    box-shadow: 3px 3px 3px #000000;
 }
 
 /* Button styles */
@@ -94,37 +122,7 @@ button {
     margin-right: 75px;
 }
 
-/* starting images */
-
-#computer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#user {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#rps-image-one {
-    display: flex;
-    max-width: 65%;
-    height: auto;
-    border: 3px solid #000000;
-    box-shadow: 3px 3px 3px #000000;
-}
-
-#rps-image-two {
-    display: flex;
-    max-width: 65%;
-    height: auto;
-    border: 3px solid #000000;
-    box-shadow: 3px 3px 3px #000000;
-}
-
-/* gzme area */
+/* game area */
 
 #game-message {
     display: flex;
@@ -146,6 +144,8 @@ button {
 /* footer */
 
 footer {
+    position: fixed;
+    bottom: 0;
     font-family: "Josefin Sans", sans-serif;
     font-size: 1rem;
     background-color: black;
@@ -171,6 +171,7 @@ footer {
     #choices {
         display: flex;
         justify-content: space-evenly;
+        margin-top: 30px;
     }
 
     .choice-btn {
@@ -182,41 +183,55 @@ footer {
         padding: 5px 5px 5px 5px;
     }
 
-    #reset-game {
+    #game-buttons {
         display: flex;
+        justify-content: space-around;
+        margin-top: 20px;
+    }
+
+    #choice-statement {
+        display: flex;
+        font-size: 2rem;
+        font-family: "Josefin Sans", sans-serif;
         justify-content: center;
+        margin-bottom: 10px;
     }
 
     .reset-btn {
         transition-duration: 0.4s;
-        margin-top: 10px;
         display: flex;
-        margin-left: 348px;
         color: black;
         background-color: red;
         font-weight: bold;
         padding: 5px;
-        margin-bottom: 5px;
+        font-size: 2rem;
+    }
+
+    .start-btn {
+        transition-duration: 0.4s;
+        display: flex;
+        color: black;
+        background-color: rgb(0, 174, 255);
+        font-weight: bold;
+        padding: 5px;
         font-size: 2rem;
     }
 
     /* starting images */
 
     #rps-image-one {
-        max-width: 50%;
+        max-width: 100%;
         height: auto;
-        margin-left: 166px;
         margin-top: 20px;
     }
 
     #rps-image-two {
-        max-width: 50%;
+        max-width: 1000%;
         height: auto;
-        margin-left: 166px;
         margin-bottom: 30px;
     }
 
-    /* gzme area */
+    /* game area */
 
     #current-score-computer {
         display: flex;
@@ -243,6 +258,8 @@ footer {
     /* footer */
 
     footer {
+        position: fixed;
+        bottom: 0;
         font-family: "Josefin Sans", sans-serif;
         font-size: 23px;
         background-color: black;
@@ -259,278 +276,18 @@ footer {
 
 /* Media query: laptops and desktops (992px and up) */
 @media screen and (min-width: 992px) {
-
     #main-heading-one {
         display: flex;
         font-size: 25px;
         justify-content: center;
     }
-
-    #the-game {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-    }
-
-    /* Button styles */
-
-    #game-choices {
-        margin-top: 20px;
-    }
-
-    #choices {
-        display: flex;
-        justify-content: space-evenly;
-    }
-
-    .choice-btn {
-        transition-duration: 0.4s;
-        margin-right: 50px;
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 2rem;
-        text-align: center;
-        padding: 5px 5px 5px 5px;
-    }
-
-    .reset-btn {
-        transition-duration: 0.4s;
-        margin-right: 10px;
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 2rem;
-        text-align: center;
-        padding: 5px 5px 5px 5px;
-    }
-
-    /* starting images */
-
-    #rps-image-one {
-        max-width: 100%;
-        height: auto;
-    }
-
-    #rps-image-two {
-        max-width: 100%;
-        height: auto;
-    }
-
-    /* game area */
-
-    #current-score-computer {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding-left: 70px;
-        font-size: 30px;
-        text-align: center;
-        margin-right: 80px;
-    }
-
-    #current-score-user {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding-left: 70px;
-        font-size: 30px;
-        text-align: center;
-        margin-right: 80px;
-    }
-
-    /* footer */
-
-    footer {
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 23px;
-        background-color: black;
-        color: azure;
-        width: 100%;
-        margin-top: auto;
-        text-align: center;
-        padding-top: 16px;
-        min-height: 60px;
-    }
-
-}
-
-/* Media query: desktops (1280px and up) */
-@media screen and (min-width: 1280px) {
-
-    #main-heading-one {
-        display: flex;
-        font-size: 25px;
-        justify-content: center;
-    }
-
-    #the-game {
-        display: flex;
-        flex-direction: row;
-    }
-
+    
     /* Button styles */
 
     #choices {
         display: flex;
         justify-content: space-evenly;
-    }
-
-    .choice-btn {
-        transition-duration: 0.4s;
-        margin-right: 50px;
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 2rem;
-        text-align: center;
-        padding: 5px 5px 5px 5px;
-    }
-
-    .reset-btn {
-        transition-duration: 0.4s;
-        margin-right: 10px;
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 2rem;
-        text-align: center;
-        padding: 5px 5px 5px 5px;
-    }
-
-    /* starting images */
-
-    #rps-image-one {
-        max-width: 100%;
-        height: auto;
-    }
-
-    #rps-image-two {
-        max-width: 100%;
-        height: auto;
-
-    }
-
-    /* game area */
-
-    #current-score {
-        display: flex;
-        justify-content: center;
-        flex-direction: row;
-        padding-left: 70px;
-        font-size: 30px;
-        text-align: center;
-        margin-right: 80px;
-    }
-
-    /* footer */
-
-    footer {
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 23px;
-        background-color: black;
-        color: azure;
-        width: 100%;
-        margin-top: auto;
-        text-align: center;
-        padding-top: 16px;
-        min-height: 60px;
-    }
-
-}
-
-/* Media query: large desktops (1440px and up) */
-@media screen and (min-width: 1440px) {
-
-    #main-heading-one {
-        display: flex;
-        font-size: 25px;
-        justify-content: center;
-    }
-
-    /* Button styles */
-
-    #choices {
-        display: flex;
-        justify-content: space-evenly;
-    }
-
-    .choice-btn {
-        transition-duration: 0.4s;
-        margin-right: 50px;
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 2rem;
-        text-align: center;
-        padding: 5px 5px 5px 5px;
-    }
-
-    .reset-btn {
-        transition-duration: 0.4s;
-        margin-right: 100px;
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 2rem;
-        text-align: center;
-        padding: 5px 5px 5px 5px;
-    }
-
-    /* starting images */
-
-    #rps-image-one {
-        max-width: 100%;
-        height: auto;
-        margin-left: 480px;
-    }
-
-    #rps-image-two {
-        max-width: 100%;
-        height: auto;
-        margin-left: 480px;
-    }
-
-    /* game area */
-
-    #current-score-user {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding-left: 70px;
-        font-size: 30px;
-        text-align: center;
-        margin-right: 80px;
-    }
-
-    #current-score-computer {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding-left: 70px;
-        font-size: 30px;
-        text-align: center;
-        margin-right: 80px;
-    }
-
-    /* footer */
-
-    footer {
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 23px;
-        background-color: black;
-        color: azure;
-        width: 100%;
-        margin-top: auto;
-        text-align: center;
-        padding-top: 16px;
-        min-height: 60px;
-    }
-
-}
-
-/* Media query: slightly wider screen for desktops (1600px and up) */
-@media screen and (min-width: 1600px) {
-
-    #main-heading-one {
-        display: flex;
-        font-size: 25px;
-        justify-content: center;
-    }
-
-    /* Button styles */
-
-    #choices {
-        display: flex;
-        justify-content: space-evenly;
+        margin-top: 30px;
     }
 
     .choice-btn {
@@ -542,162 +299,46 @@ footer {
         padding: 5px 5px 5px 5px;
     }
 
-    .reset-btn {
-        transition-duration: 0.4s;
-        margin-right: 100px;
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 2rem;
-        text-align: center;
-        padding: 5px 5px 5px 5px;
-    }
-
-    /* starting images */
-
-    #rps-image-one {
-        max-width: 100%;
-        height: auto;
-        margin-left: 166px;
-        margin-top: 160px;
-    }
-
-    #rps-image-two {
-        max-width: 70%;
-        height: auto;
-        margin-left: 166px;
-        margin-right: 50px;
-        margin-top: 50px;
-    }
-
-    /* game area */
-
-    #current-score-computer {
+    #game-buttons {
         display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding-left: 70px;
-        font-size: 30px;
-        text-align: center;
-        margin-right: 80px;
-        margin-top: 20px;
-    }
-
-    #current-score-user {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding-left: 70px;
-        font-size: 30px;
-        text-align: center;
-        margin-right: 80px;
-        margin-bottom: 20px;
-    }
-
-    /* footer */
-
-    footer {
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 23px;
-        background-color: black;
-        color: azure;
-        width: 100%;
-        margin-top: auto;
-        text-align: center;
-        padding-top: 16px;
-        min-height: 60px;
-    }
-
-}
-
-/* Media query: Desktop large (1920px and up) */
-@media screen and (min-width: 1920px) {
-
-    #main-heading-one {
-        display: flex;
-        font-size: 25px;
-        justify-content: center;
-    }
-
-    /* Button styles */
-
-    #choices {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .choice-btn {
-        transition-duration: 0.4s;
-        margin-right: 200px;
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 2rem;
-        text-align: center;
-        padding: 5px 5px 5px 5px;
-    }
-
-    .reset-btn {
-        transition-duration: 0.4s;
-        margin-right: 400px;
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 2rem;
-        text-align: center;
-        padding: 5px 5px 5px 5px;
+        justify-content: space-around;
         margin-top: 20px;
         margin-bottom: 20px;
     }
 
-    /* starting images */
-
-    #rps-image-one {
-        max-width: 100%;
-        height: auto;
-        margin-left: 25px;
-        margin-top: 160px;
-    }
-
-    #rps-image-two {
-        max-width: 100%;
-        height: auto;
-        margin-right: 30px;
-        margin-top: 160px;
-        padding-left: 0px;
-        margin-left: 30px;
-    }
-
-    /* game area */
-
-    #game-message {
+    #choice-statement {
         display: flex;
-        justify-content: center;
+        font-size: 2rem;
         font-family: "Josefin Sans", sans-serif;
-        margin-top: 260px;
+        justify-content: center;
+        margin-bottom: 10px;
     }
 
-
-    #current-score-computer {
+    .reset-btn {
+        transition-duration: 0.4s;
         display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding-left: 15px;
-        font-size: 30px;
-        text-align: center;
-        margin-right: 0px;
-        margin-top: 150px;
+        color: black;
+        background-color: red;
+        font-weight: bold;
+        padding: 5px;
+        font-size: 2rem;
     }
 
-    #current-score-user {
+    .start-btn {
+        transition-duration: 0.4s;
         display: flex;
-        justify-content: center;
-        flex-direction: column;
-        padding-left: 0px;
-        font-size: 30px;
-        text-align: center;
-        margin-right: 0px;
-        margin-bottom: 0px;
-        margin-top: 150px;
+        color: black;
+        background-color: rgb(0, 174, 255);
+        font-weight: bold;
+        padding: 5px;
+        font-size: 2rem;
     }
 
     /* footer */
 
     footer {
+        position: relative;
+        bottom: 0;
         font-family: "Josefin Sans", sans-serif;
         font-size: 23px;
         background-color: black;
