--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,6 @@ button:hover {
     transition-duration: 0.4s;
     margin-top: 10px;
     display: flex;
-    margin-left: 105px;
     color: black;
     background-color: red;
     font-weight: bold;
@@ -123,6 +122,7 @@ button:hover {
     font-size: 1rem;
     text-decoration: none;
     margin-top: 10px;
+    height: fit-content;
 }
 
 /* game area */
@@ -208,6 +208,19 @@ footer {
         font-weight: bold;
         padding: 5px;
         font-size: 2rem;
+    }
+
+    .home-btn {
+        transition-duration: 0.4s;
+        display: flex;
+        color: black;
+        background-color: rgb(0, 174, 255);
+        font-weight: bold;
+        padding: 5px;
+        font-size: 2rem;
+        text-decoration: none;
+        margin-top: 10px;
+        height: fit-content;
     }
 
     /* starting images */
